# velasa

./: README.md
QuickTrader (1)/QuickTrader/: README.md  main.py  pyproject.toml  run_app.py  start_app.bat  start_app.sh
QuickTrader (1)/QuickTrader/android/: app.json
QuickTrader (1)/QuickTrader/attached_assets/WaitlistWebsite/: README.md  build.config.json  main.py
QuickTrader (1)/QuickTrader/attached_assets/WaitlistWebsite/android/: app.json
QuickTrader (1)/QuickTrader/attached_assets/WaitlistWebsite/components/: dashboard.py  notifications.py  portfolio_analysis.py  profile.py  trading.py
QuickTrader (1)/QuickTrader/attached_assets/WaitlistWebsite/utils/: auth.py  market_data.py  notifications.py  portfolio.py  sentiment.py  verification.py
QuickTrader (1)/QuickTrader/components/: charts.py  dashboard.py  notifications.py  portfolio.py  portfolio_analysis.py  profile.py  sidebar.py  trading.py
QuickTrader (1)/QuickTrader/styles/: style.css
QuickTrader (1)/QuickTrader/utils/: auth.py  portfolio.py  sms.py  stock_data.py  verification.py
