[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "nltk>=3.9.1",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
    "twilio>=9.4.6",
    "yfinance>=0.2.54",
]
